# gradio-huggingface-hub-search

./: README.md  pyproject.toml
demo/: app.py
src/huggingface_hub_search/: __init__.py
src/huggingface_hub_search/static/: script.js  style.css  template.html
tests/: _demo.py  conftest.py  test_component.py  test_filter_chips.py  test_ui.py
